[package]
name = "flicker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flicker"
harness = false

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = [
  "esp32s3",
  "log-04",
  "unstable",
] }
log = "0.4.27"
embedded-nal-async = "0.8.0"
embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "log",
  "tcp",
  "udp",
  "dns"
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = [
  "log",
  "task-arena-size-65536",
] }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "log",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
embedded-graphics = "0.8.1"
esp-hub75 = { version = "0.5.0", features = ["esp32s3"] }
embassy-sync = "0.7.0"
reqwless = "0.13.0"
# log = { version = "0.4", features = ["release_max_level_off"]}
# esp-println = { version = "0.15", features = ["log-04", "esp32s3"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[features]
portals3 = []

